# api/openapi.yaml
@@ -495,6 +495,60 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ImportResult"
+  /v1/bankImporters/files:
+    get:
+      tags:
+        - bank importers
+      summary: get all bank importer files
+      operationId: getBankImporterFiles
+      responses:
+        "200":
+          description: bank importer files
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/BankImporterFile"
+
+  /v1/bankImporters/files/{id}:
+    get:
+      tags:
+        - bank importers
+      summary: download bank importer file
+      operationId: downloadBankImporterFile
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of the bank importer file"
+          required: true
+          schema:
+            type: "string"
+            format: "uuid"
+      responses:
+        "200":
+          description: bank importer file content
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+    delete:
+      tags:
+        - bank importers
+      summary: delete bank importer file
+      operationId: deleteBankImporterFile
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of the bank importer file"
+          required: true
+          schema:
+            type: "string"
+            format: "uuid"
+      responses:
+        "200":
+          description: no body
 
   /v1/transactions:
     get:
@@ -511,15 +565,19 @@ paths:
         - name: amountFrom
           in: "query"
           description: "Don't return transactions with amount less than this"
+          x-go-type: decimal.Decimal
+          x-is-decimal: true
           schema:
             type: "number"
-            format: "double"
+            format: "decimal"
         - name: amountTo
           in: "query"
           description: "Don't return transactions with amount more than this"
+          x-go-type: decimal.Decimal
+          x-is-decimal: true
           schema:
             type: "number"
-            format: "double"
+            format: "decimal"
         - name: dateFrom
           in: "query"
           description: "Don't return transactions with date before this"
@@ -2100,6 +2158,25 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/BankImporter"
+
+    BankImporterFile:
+      type: object
+      allOf:
+        - $ref: "#/components/schemas/Entity"
+        - type: object
+          properties:
+            bankImporterId:
+              type: string
+              format: uuid
+            filename:
+              type: string
+            uploadDate:
+              type: string
+              format: date-time
+          required:
+            - bankImporterId
+            - filename
+            - uploadDate
 
     BudgetItemNoID:
       type: object
