# backend/pkg/generated/goserver/api_bank_importers.go
@@ -83,6 +83,21 @@ func (c *BankImportersAPIController) Routes() Routes {
 			"/v1/bankImporters/{id}/upload",
 			c.UploadBankImporter,
 		},
+		"GetBankImporterFiles": Route{
+			strings.ToUpper("Get"),
+			"/v1/bankImporters/files",
+			c.GetBankImporterFiles,
+		},
+		"DownloadBankImporterFile": Route{
+			strings.ToUpper("Get"),
+			"/v1/bankImporters/files/{id}",
+			c.DownloadBankImporterFile,
+		},
+		"DeleteBankImporterFile": Route{
+			strings.ToUpper("Delete"),
+			"/v1/bankImporters/files/{id}",
+			c.DeleteBankImporterFile,
+		},
 	}
 }
 
@@ -246,8 +261,59 @@ func (c *BankImportersAPIController) UploadBankImporter(w http.ResponseWriter, r
 
 		fileParam = param
 	}
+	if fileParam != nil {
+		defer fileParam.Close()
+	}
 
 	result, err := c.service.UploadBankImporter(r.Context(), idParam, formatParam, containsAllTransactionsParam, fileParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	_ = EncodeJSONResponse(result.Body, &result.Code, w)
+}
+
+// GetBankImporterFiles - get all bank importer files
+func (c *BankImportersAPIController) GetBankImporterFiles(w http.ResponseWriter, r *http.Request) {
+	result, err := c.service.GetBankImporterFiles(r.Context())
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	_ = EncodeJSONResponse(result.Body, &result.Code, w)
+}
+
+// DownloadBankImporterFile - download bank importer file
+func (c *BankImportersAPIController) DownloadBankImporterFile(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	idParam := params["id"]
+	if idParam == "" {
+		c.errorHandler(w, r, &RequiredError{"id"}, nil)
+		return
+	}
+	result, err := c.service.DownloadBankImporterFile(r.Context(), idParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	_ = EncodeJSONResponse(result.Body, &result.Code, w)
+}
+
+// DeleteBankImporterFile - delete bank importer file
+func (c *BankImportersAPIController) DeleteBankImporterFile(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	idParam := params["id"]
+	if idParam == "" {
+		c.errorHandler(w, r, &RequiredError{"id"}, nil)
+		return
+	}
+	result, err := c.service.DeleteBankImporterFile(r.Context(), idParam)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		c.errorHandler(w, r, err, &result)
