# backend/pkg/generated/goserver/model_bank_importer_file.go
@@ -1,0 +1,68 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Geek Budget - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ * Contact: ilya.korolev@outlook.com
+ */
+
+package goserver
+
+import (
+	"time"
+)
+
+type BankImporterFile struct {
+	Id string `json:"id"`
+
+	BankImporterId string `json:"bankImporterId"`
+
+	Filename string `json:"filename"`
+
+	UploadDate time.Time `json:"uploadDate"`
+}
+
+type BankImporterFileInterface interface {
+	GetId() string
+	GetBankImporterId() string
+	GetFilename() string
+	GetUploadDate() time.Time
+}
+
+func (c *BankImporterFile) GetId() string {
+	return c.Id
+}
+func (c *BankImporterFile) GetBankImporterId() string {
+	return c.BankImporterId
+}
+func (c *BankImporterFile) GetFilename() string {
+	return c.Filename
+}
+func (c *BankImporterFile) GetUploadDate() time.Time {
+	return c.UploadDate
+}
+
+// AssertBankImporterFileRequired checks if the required fields are not zero-ed
+func AssertBankImporterFileRequired(obj BankImporterFile) error {
+	elements := map[string]interface{}{
+		"id":             obj.Id,
+		"bankImporterId": obj.BankImporterId,
+		"filename":       obj.Filename,
+		"uploadDate":     obj.UploadDate,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertBankImporterFileConstraints checks if the values respects the defined constraints
+func AssertBankImporterFileConstraints(obj BankImporterFile) error {
+	return nil
+}
